--- a/core/templates/registration/passwor_reset_confirm.html
+++ b/core/templates/registration/passwor_reset_confirm.html
@@ -1,40 +1,75 @@
 {% extends "index.html" %}
-{% load i18n static %}
+{% load i18n static widget_tweaks%}
 
-	{% block content%}
+{% block content%}
 
-	<div class="row">
-	<div class="col-md-4 col-md-offset-4 col-xs-4 col-xs-offset-4 col-sm-4 col-sm-offset-4 col-lg-4 col-lg-offset-4 col-xl-4 col-xl-offset-4">
-  <div class="row">
-  <div class="col-md-offset-2 col-md-8 col-sm-offset-2 col-sm-8 col-xs-offset-2 col-xs-8 col-lg-offset-2 col-lg-8 col-xs-offset-2 col-xs-8">
-  </br>
-  </br>
-  <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus">
-  </br>
-  </div>
-  </div>
-  </div>
-	<div class="row ">
-	<div class="col-lg-9 col-lg-offset-2 col-xs-9 col-xs-offset-2 col-sm-9 col-sm-offset-2 col-md-9 col-md-offset-2 col-xl-9 col-xl-offset-2">
+<div class="row">
+	<div class="col-sm-6 col-sm-offset-4 col-md-6 col-md-offset-4 col-xs-6 col-xs-offset-4 col-lg-6 col-lg-offset-4  col-xl-6 col-xl-offset-4 ">
+		<div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2  col-lg-8 col-lg-offset-2  col-xl-8 col-xl-offset-2">
+			<img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block logo-login " alt="logo amadeus">
+		</div>
+	</div>
+</div>
 
+<div class="row">
+	<div class="col-md-8 col-md-offset-3 col-sm-10 col-sm-offset-2  col-xs-12 col-xs-offset-1 col-lg-8 col-lg-offset-3 col-xl-8 col-xl-offset-3">
+		<div class="card">
+			<div class="card-block">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<h2 style="color:#43a251"><strong>{% trans "Reset Your Password" %}</strong></h2>
+					</div>
+				</div>
+				{% if validlink %}
 
-
-	{% if validlink %}
-
-	<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
-
-	<form method="post">{% csrf_token %}
-	{{ form.new_password1.errors }}
-	<p class="aligned wide"><label for="id_new_password1">{% trans 'New password:' %}</label>{{ form.new_password1 }}</p>
-	{{ form.new_password2.errors }}
-	<p class="aligned wide"><label for="id_new_password2">{% trans 'Confirm password:' %}</label>{{ form.new_password2 }}</p>
-	<p><input type="submit" value="{% trans 'Change my password' %}" /></p>
-	</form>
-
-	{% else %}
-
-	<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
-
-	{% endif %}
-
-	{% endblock %}
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1 text-justify">
+						<p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
+					</div>
+				</div>
+				<form method="post">
+					{% csrf_token %}
+					<div class="col-md-10 col-md-offset-1">
+						{% if form.new_password2.errors %}
+						<div class="row">
+							</br>
+							<div class="alert alert-danger alert-dismissible" role="alert">
+								<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+								<ul>
+									{% for error in form.new_password2.errors %}
+									<li>{{ error }}</li>
+									{% endfor %}
+								</ul>
+							</div>
+						</div>
+					</div>
+					{% endif %}
+					{% for field in form %}
+					<div class="col-md-10 col-md-offset-1">
+						<div class="form-group {% if form.has_error %} has-error {% endif %}">
+							<label for="{{ field.auto_id }}">{{ field.label }}</label>
+							{% render_field field class='form-control' %}
+						</div>
+					</div>
+					{% endfor %}
+					<div class="row text-center">
+						<input type="submit" value="{% trans 'Change Password' %}" class="btn btn-primary btn-raised" />
+					</div>
+				</form>
+				{% else %}
+				<div class="row">
+					<div class="col-md-10 col-md-offset-1 text-justify">
+						<p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
+					</div>
+				</div>
+				{% endif %}
+				</br>
+			</div>
+		</div>
+	</div>
+</div>
+</br>
+</br>
+{% endblock %}
