--- a/links/templates/links/update_link.html
+++ b/links/templates/links/update_link.html
@@ -63,14 +63,14 @@
                     $('#requisicoes_ajax').empty();
                     $('#link_edit_{{ link.slug }}').replaceWith(data);
                     $('#link_{{ link.slug }}').replaceWith(data);
-                    alertify.alert("Sucessfully Updated!")
+                    alertify.success(" {% trans 'Link Sucessfully Updated!' %} ");
                 },
                 error: function(data){
                     $("div.modal-backdrop.fade.in").remove();
                     $('#requisicoes_ajax').empty();
                     $('#requisicoes_ajax').append(data.responseText);
                     $('#linksModalEdit').modal();
-                    alertify.alert('Invalid link, insert a valid one!');
+                    alertify.error("{% trans 'Invalid link, insert a valid one!' %}");
                 }
             });
             event.preventDefault();
