--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -119,7 +119,10 @@
       </div>
     </div>
 </div>
-  <h3>{% trans 'Exercises' %}</h3>
+  <div class="col-md-6">
+      <h3>{% trans 'Students - Especific Exercises' %}</h3>  
+      <br/>  
+  </div>
     {# mostra a lista de usuários caso seja um professor ou admin #}
   {% if user|has_role:'professor' or user|has_role:'system_admin' %}
     {% for user in users %}
