reverting commit that modified course

--- a/courses/templates/course/course_card.html
+++ b/courses/templates/course/course_card.html
@@ -52,7 +52,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">{% trans 'Replicate Course' %}</h4>
+                <h4 class="modal-title">{% trans 'Repicate Course' %}</h4>
             </div>
             <div class="modal-body">
                 <section>
