Revert "just fixed some major UI issues"
This reverts commit a260d811e7b2cbdc2830810fc42f4f4f4a81ef27.

--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -48,13 +48,21 @@
     </div>
     <div class="panel-body">
       <p><b>{% trans 'Coordinator' %}: </b>{{course.coordenator}}</p>
+      <p><b>{% trans 'Teacher' %}: </b>{{course.professors.all.0}}</p>
       <p>
         <b>{% trans 'Description' %}:</b>
         <i>
-          {{ course.description |safe }}
+          {{ course.objectivies |safe }}
         </i>
       </p>
-     
+      <div class="row">
+              <div class="col-xs-6 col-md-6 data_register_course">
+                <p><b>{% trans 'Begin of Course Date' %}: </b>{{course.init_date}}</p>
+              </div>
+              <div class="col-xs-6 col-md-6 data_register_course">
+                <p><b>{% trans 'End of Course Date' %}: </b>{{course.end_date}}</p>
+              </div>
+            </div>
     </div>
   </div>
 
