modal create exercise #95

--- a/exercise/templates/exercise/card_list_user.html
+++ b/exercise/templates/exercise/card_list_user.html
@@ -37,7 +37,7 @@
                 <h4>{% trans 'Delivery' %}</h4>
               </div>
                 {% for file in files %}
-                  <li>{{file.exercise}}: <a href="{{file.file.url}}" target="_blank">{{file.name}}</a></li>
+                  <li>{{file.exercise}}: <a href="{{file.file.url}}" target="_blank">{{file.name_file}}</a></li>
                 {% endfor %}
                 
             </div>
