--- a/exercise/templates/exercise/card_topic_exercises.html
+++ b/exercise/templates/exercise/card_topic_exercises.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
       <form class="form-horizontal">
         <fieldset>
-          <center><legend>{{exercise.name}}</legend></center>
+          <center><legend>{{exercise.name_exercise}}</legend></center>
           <div class="container-fluid">
             <div class="form-group">
               <label class="col-md-2 col-xs-2 col-sm-2 control-label">Describe: </label><br>
