Fix'd last field of register translation [Issues:#398,#415]

--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -58,7 +58,7 @@
 								{% elif field.auto_id == 'id_image' %}
 								{% render_field field class='form-control' %}
 								<div class="input-group">
-									<input type="text" readonly="" class="form-control" placeholder="Choose your photo...">
+									<input type="text" readonly="" class="form-control" placeholder="{% trans 'Choose your photo...' %}">
 									<span class="input-group-btn input-group-sm">
 										<button type="button" class="btn btn-fab btn-fab-mini">
 											<i class="material-icons">image</i>
