--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -96,7 +96,16 @@
 
               {% endblock %}
                 {% if user|has_role:'system_admin' %}
-                    <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
+                    
+                    <li>
+                      <a href="#menu_users" class="accordion" data-toggle="collapse">{% trans 'Manage Users' %}<span class="pull-right glyphicon glyphicon-chevron-down"></span></a>
+                      <div id="menu_users" class="collapse">
+                        <ul class="nav nav-pill nav-stacked accordion_list">
+                          <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
+                          <li> <a href="{% url 'users:create' %}">{% trans 'Add User' %}</a></li>
+                        </ul>
+                      </div> 
+                    </li>
                     <li> <a href="{% url 'app:settings' %}">{% trans 'Settings' %}</a></li>
                 {% endif %}
             </ul>
