--- a/exam/templates/exam/create.html
+++ b/exam/templates/exam/create.html
@@ -62,46 +62,7 @@
             </div>
 
             <!-- multiple choice question -->
-            <div id="multiple-choice" style="display:none;">
 
-            <hr>
-              <div class="row form-group">
-
-                <label for="question-name" class="col-md-2 control-label">Question</label>
-
-
-                <div class="col-md-10">
-                  <textarea class="form-control" rows="1" id="question-name" placeholder="Wording"></textarea>
-                </div>
-
-
-              </div>
-              <div class="row form-group">
-                <label for="alternatives" class="col-md-2 control-label">Alternatives</label>
-                <div class="col-md-10" id="radios">
-                  <div class="radio radio-primary form-group">
-                    <label>
-                      <input checked type="radio" name="multiple-choice" id="alternative1" value="1">
-                      <textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>
-                    </label>
-                  </div>
-                  <div class="radio radio-primary form-group">
-                    <label>
-                      <input type="radio" name="multiple-choice" id="alternative2" value="2">
-                      <textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>
-                    </label>
-                  </div>
-                </div>
-              </div>
-              <!-- new alternative button -->
-              <div class="form-group">
-                <div class="col-md-12 col-md-offset-2">
-                <button type="button" class="btn btn-primary" id="mc-new-alternative">New Alternative</button>
-                </div>
-              </div>
-              <!-- save and cancel buttons -->
-              <hr>
-            </div>
 
             <!-- true or false question -->
 
@@ -198,7 +159,7 @@
     '<div class="row form-group" id="questionType_' + idQuestionType +'">' +
     '<label for="questionType" class="col-md-2 control-label">' +
     '{% trans "Question Type" %}</label>' + '<div class="col-md-10">' +
-          '<select id="questionType'+ idQuestionType +'" class="form-control" name="option_question" onchange="showDiv (this)">' +
+          '<select id="questionType'+ idQuestionType +'" class="form-control" name="option_question" onchange="showDiv (this, '+ idQuestionType +')">' +
             '<option selected disabled>{% trans "Question Type" %}</option>' +
             '<option value="0">{% trans "Multiple Choice" %}</option>' +
             '<option value="1">{% trans "True or False" %}</option>' +
@@ -206,24 +167,50 @@
             '<option value="3">{% trans "Discursive Question" %}</option>' +
           '</select>' +
         '</div>' +
-      '</div>' + '<hr id="'+idQuestionType+'">'
+      '</div>' + '<hr id="hr_'+idQuestionType+'">'
       ;
       if (idQuestionType == 1){
         $(element).insertAfter('#buttonAddQuestion');
       }else{
-
-        var idHr = '#'+(idQuestionType-1);
-        $(element).insertAfter(idHr);
+        var idhr = '#hr_'+(idQuestionType-1);
+        $(element).insertAfter(idhr);
       }
     idQuestionType++;
   })
-  function showDiv (elem) {
+  function showDiv (elem, questionType_id) {
     if (elem.value == 0) {
-      document.getElementById('multiple-choice').style.display = "block";
-      document.getElementById('true-or-false').style.display = "none";
-
-      document.getElementById('discursive-question').style.display = "none";
+      var questionChoise =
+      '<div id="multiple-choice">' +
+              '<div class="row form-group">'+
+                '<label for="question-name" class="col-md-2 control-label">Question</label>'+
+                '<div class="col-md-10">'+
+                  '<textarea class="form-control" rows="1" id="question-name" placeholder="Wording"></textarea>'+
+                '</div>'+
+              '</div>'+
+              '<div class="row form-group">'+
+                '<label for="alternatives" class="col-md-2 control-label">Alternatives</label>'+
+                '<div class="col-md-10" id="radios">'+
+                  '<div class="radio radio-primary form-group">'+
+                    '<label>'+
+                      '<input checked type="radio" name="multiple-choice" id="alternative1" value="1">'+
+                      '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
+                    '</label>'+
+                  '</div>'+
+                  '<div class="radio radio-primary form-group">'+
+                    '<label>'+
+                      '<input type="radio" name="multiple-choice" id="alternative2" value="2">'+
+                      '<textarea class="form-control" rows="1" placeholder="Write your alternative"></textarea>'+
+                    '</label>'+
+                  '</div>'+
+                '</div>'+
+              '</div>'+
+              '<div class="form-group">'+
+                '<button type="button" class="btn btn-raised btn-primary" id="mc-new-alternative">New Alternative</button>'+
+              '</div>'+
+            '</div>';
+      $(questionChoise).insertBefore('#hr_'+questionType_id);
     } else if (elem.value == 1) {
+
       document.getElementById('true-or-false').style.display = "block";
       document.getElementById('multiple-choice').style.display = "none";
 
